# simple_echo_server

./: README.md
client/: CMakeLists.txt  main.cpp
client/src/config/: config.cpp  config.h
client/src/core/: client.cpp  client.h
client/src/core/TCP/: tcp.cpp  tcp.h
client/src/core/UDP/: udp.cpp  udp.h
server/: CMakeLists.txt  main.cpp
server/src/config/: config.cpp  config.h
server/src/core/: listener.h
server/src/core/TCP/: clientcontroller.cpp  clientcontroller.h  tcp.cpp  tcp.h
server/src/core/UDP/: udp.cpp  udp.h
